--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -3,6 +3,6 @@ project(design)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_library(design STATIC code/Protocol.h code/CommunicationDevice.h code/SerialDevice.h code/modbus.h code/hdlc.h code/main.cpp)
+add_library(design STATIC Protocol.h CommunicationDevice.h SerialDevice.h modbus.h hdlc.h main.cpp)
 
-add_executable(main code/main.cpp)
+add_executable(main main.cpp)
